update setup.py trying to fix for PyPI

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 global-exclude *.pyc
 include README.rst
 include MIT-LICENSE.txt
-recursive-include audiofield *
+recursive-include audiofield *.py
