excluded _mp3 folder while installing it

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,4 @@ include MIT-LICENSE.txt
 include requirements.txt
 
 recursive-include audiofield *
+recursive-exclude audiofield/static/audiofield/_mp3 *
